# Agentic_AI

./: .gitignore  pyproject.toml  requirements.txt
DEEP_AGENTS/: 1_Basic_deep_agent.ipynb
Langchain_Updated/: 1_intro.ipynb  2_model_integration.ipynb  3_tools.ipynb  4_messages.ipynb  5_Structured_output.ipynb  6_middlewares.ipynb
Langgraph_updated/: 2_human_in_loop.ipynb
Langgraph_updated/1_basic_chatbot/: 1_chatbot.ipynb
MCP/: client.py  mathserver.py  weather.py
RAG/: document.ipynb  pdf_loader.ipynb
Vectorless_RAG/: pageIndex.ipynb
data/text_files/: python_intro.txt
data/vector_store/3607c7e8-2378-4c07-be3e-91e995858e57/: index_metadata.pickle
