[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.3",
    "langchain-google-vertexai>=3.2.3",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.1",
    "langsmith>=0.8.5",
    "python-dotenv>=1.2.2",
]
