[project]
name = "agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.5.9",
    "deepagents>=0.6.3",
    "faiss-cpu>=1.14.2",
    "ipykernel>=7.2.0",
    "ipython>=9.13.0",
    "langchain>=1.3.1",
    "langchain-agent>=0.1.1",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.3",
    "langchain-google-vertexai>=3.2.3",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "langchain-tavily>=0.2.18",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.1",
    "langsmith>=0.8.5",
    "mcp>=1.27.1",
    "pageindex>=0.2.8",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "tavily-python>=0.7.24",
]
